--- a/src/index.html
+++ b/src/index.html
@@ -35,14 +35,14 @@
     </div>
 </header>
 <main class="main">
-    <section class="blog">
+    <section class="blog" id="blog">
         <div class="container">
             <div class="blog__container">
                 <div class="blog__wrapper flex">
                     <div class="blog__text-wrapper flex">
                         <h1 class="title blog__title">
-                            <p class="blog__name">Hi, I am John,</p>
-                            <p class="blog__profession">Creative Technologist</p>
+                            <span class="blog__name">Hi, I am John,</span>
+                            <span class="blog__profession">Creative Technologist</span>
                         </h1>
                         <p class="blog__desc">
                             Amet minim mollit non deserunt ullamco est sit aliqua dolor do&nbsp;amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
@@ -68,7 +68,7 @@
                     </div>
                     <div class="posts_main">
                         <ul class="posts__list  list-reset flex">
-                            <il class="posts__list__item">
+                            <li class="posts__list__item">
                                 <article class="posts__article">
                                     <h3 class="posts__article-title">
                                         Making a&nbsp;design system from scratch
@@ -80,8 +80,8 @@
                                         Amet minim mollit non deserunt ullamco est sit aliqua dolor do&nbsp;amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                                     </p>
                                 </article>
-                            </il>
-                            <il class="posts__list__item">
+                            </li>
+                            <li class="posts__list__item">
                                 <article class="posts__article">
                                     <h3 class="posts__article-title">
                                         Creating pixel perfect icons in Figma
@@ -93,7 +93,7 @@
                                         Amet minim mollit non deserunt ullamco est sit aliqua dolor do&nbsp;amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                                     </p>
                                 </article>
-                            </il>
+                            </li>
                         </ul>
                     </div>
                 </div>
